--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,20 @@ dependencies:
   flutter: 
     sdk: flutter
   google_fonts: ^2.3.2
+  font_awesome_flutter:
   curved_navigation_bar: ^1.0.3
+  firebase_core: ^1.16.0
+  google_sign_in: ^5.3.0
+  firebase_auth: ^3.3.17
+  flutter_easyloading: ^3.0.3
+  flutter_slidable: ^1.2.0
+  flutter_phone_direct_caller: ^2.1.1
+  flutter_sms: ^2.3.2
+  flutter_neumorphic: ^3.2.0
+  get_storage: ^2.0.3
+  share_plus: ^4.0.4
+  image_picker: ^0.8.5+2
+  image_preview: ^1.0.1
 
 dev_dependencies: 
   flutter_lints: ^1.0.0
